tests/expected_invalid_foreign_fn_body.diag.out
<input>:2:52: error: foreign functions may not define a body
    public foreign fn getenv(name: CString) -> CString {
                                                       ^
